--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,15 @@ authors = ["Logan Reed <me@loganreed.org>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
-numpy = "^1.25.2"
-pandas = "^2.1.0"
+python = ">=3.11,<3.12"
 scikit-learn = "^1.3.0"
 matplotlib = "^3.7.2"
 seaborn = "^0.12.2"
+torch = {version = "^2.0.1+rocm5.4.2", source = "pytorch"}
+torchvision = {version = "^0.15.2+rocm5.4.2", source = "pytorch"}
+numpy = "^1.25.2"
+pandas = "^2.1.0"
+scikit-plot = "^0.3.7"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -23,6 +26,12 @@ isort = "^5.12.0"
 pytest = "^7.4.0"
 tox = "^4.11.0"
 matplotlib-backend-kitty = "^2.1.2"
+
+
+[[tool.poetry.source]]
+name = "pytorch"
+url = "https://download.pytorch.org/whl/rocm5.4.2"
+priority = "explicit"
 
 [build-system]
 requires = ["poetry-core"]
